--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.0.0",
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "framer-motion": "^11.2.4",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.16",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
@@ -23,5 +33,8 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "browser": {
+    "child_process": false
   }
 }
