--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "cloudinary": "^2.2.0",
     "framer-motion": "^11.2.4",
     "jose": "^5.3.0",
     "mongodb": "^6.5.0",
