--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@auth/mongodb-adapter": "^3.0.0",
     "@material-tailwind/html": "^2.2.2",
     "@material-tailwind/react": "^2.1.9",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "cloudinary": "^2.2.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.2.4",
     "jose": "^5.3.0",
+    "loadash": "^1.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.2.3",
